# SDLpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
VisualC/: SDLpp_VS2013E.sln
VisualC/SDLpp/: SDLpp_VS2013E.vcxproj  SDLpp_VS2013E.vcxproj.filters
VisualC/examples/colors/: colors_VS2013E.vcxproj  colors_VS2013E.vcxproj.filters
VisualC/examples/offscreen_drawing/: offscreen_drawing_VS2013E.vcxproj  offscreen_drawing_VS2013E.vcxproj.filters
VisualC/examples/sprite/: sprite_VS2013E.vcxproj  sprite_VS2013E.vcxproj.filters
VisualC/examples/text/: text_VS2013E.vcxproj  text_VS2013E.vcxproj.filters
VisualC/examples/view/: view_VS2013E.vcxproj  view_VS2013E.vcxproj.filters
doc/html/: Clock_8h_source.html  Color_8h_source.html  Duration_8h_source.html  Font_8h_source.html  Renderer_8h_source.html  SDLpp_8h_source.html  Sprite_8h_source.html  Surface_8h_source.html  Text_8h_source.html  Texture_8h_source.html  Util_8h_source.html  Vector2_8h_source.html  Vector2f_8h_source.html  View_8h_source.html  Window_8h_source.html  annotated.html  classes.html  classsdl_1_1Clock-members.html  classsdl_1_1Clock.html  classsdl_1_1Color-members.html  classsdl_1_1Color.html  classsdl_1_1Duration-members.html  classsdl_1_1Duration.html  classsdl_1_1Font-members.html  classsdl_1_1Font.html  classsdl_1_1Renderer-members.html  classsdl_1_1Renderer.html  classsdl_1_1Sprite-members.html  classsdl_1_1Sprite.html  classsdl_1_1Surface-members.html  classsdl_1_1Surface.html  classsdl_1_1Text-members.html  classsdl_1_1Text.html  classsdl_1_1Texture-members.html  classsdl_1_1Texture.html  classsdl_1_1Vector2-members.html  classsdl_1_1Vector2.html  classsdl_1_1Vector2f-members.html  classsdl_1_1Vector2f.html  classsdl_1_1View-members.html  (+8 more)
doc/html/search/: all_0.js  (+10 more)
doc/latex/: annotated.tex  classsdl_1_1Clock.tex  classsdl_1_1Color.tex  classsdl_1_1Duration.tex  classsdl_1_1Font.tex  classsdl_1_1Renderer.tex  classsdl_1_1Sprite.tex  classsdl_1_1Surface.tex  classsdl_1_1Text.tex  classsdl_1_1Texture.tex  classsdl_1_1Vector2.tex  classsdl_1_1Vector2f.eps  classsdl_1_1Vector2f.tex  classsdl_1_1View.tex  classsdl_1_1Window.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  refman.tex
examples/colors/: Main.cpp
examples/offscreen_drawing/: Main.cpp
examples/sprite/: Main.cpp
examples/text/: Main.cpp
examples/view/: Main.cpp
examples/window/: Main.cpp
include/: Clock.h  Color.h  Duration.h  Font.h  Mouse.h  Renderer.h  SDLpp.h  Sprite.h  Surface.h  Text.h  Texture.h  Util.h  Vector2.h  Vector2f.h  View.h  Window.h
src/: Clock.cpp  Renderer.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Vector2f.cpp  View.cpp  Window.cpp
(+2 files in other folders)
